# russimp-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  install_assimp.bash  install_assimp.ps1  rustfmt.toml  wrapper.h
.github/workflows/: release.yml  russimp-sys.yml  test.yml  workflow.yml
build_support/: download.rs  mod.rs  target.rs
src/: bindings.rs  lib.rs
