[package]
name = "russimp-sys"
version = "2.0.2"
authors = ["Jhonny Knaak de Vargas"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/jkvargas/russimp-sys"
categories = [
    "rendering",
    "external-ffi-bindings",
    "game-engines",
    "multimedia",
]
keywords = ["assimp", "3d", "blend", "3ds", "glTF"]
repository = "https://github.com/jkvargas/russimp-sys"
description = "Raw Assimp bindings for Rust"
include = [
    "/assimp/",
    "/src/",
    "/bin/",
    "/build.rs",
    "/wrapper.h",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "!*.bash",
    "!*.ps1",
]

[lib]
name = "russimp_sys"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "package"
path = "bin/package/main.rs"

[features]
default = []
build-assimp = []
prebuilt = []
nozlib = []
static-link = ["build-assimp"]

[dependencies]
flate2 = "1.0.25"
tar = "0.4.38"

[build-dependencies]
bindgen = "0.63.0"
built = "0.5.2"
cmake = "0.1.49"
flate2 = "1.0.25"
reqwest = { version = "0.11.13", features = ["blocking", "rustls-tls"] }
tar = "0.4.38"
which = "4.3.0"
